# cets-scipion

./: .pre-commit-config.yaml  README.md  pyproject.toml
scipion/: constants.py
scipion/converters/: base_converter.py  coodinates3d.py  ctf.py  ctf_set.py  subtomograms.py  tilt_series.py  tilt_series_set.py  tomograms_set.py
scipion/scripts/: example.py
scipion/tests/data/: coordinates3d.sqlite
scipion/utils/: utils.py  utils_sqlite.py
